ddetect (0.95) UNRELEASED; urgency=low

  * Colin Watson
    - Bump priorities of hw-detect and hw-detect-full to standard, in line
      with the override file.
  * Joey Hess
    - Follow cdrom-detect's lead by making ethdetect ask for a driver 
      floppy if the network card detection fails and no module was
      selected from the manual list. The previous method didn't work
      since many media lack a menu item to load floppies. Closes: #247941
    - BTW, think "firmware floppy". :-(

 -- Joey Hess <joeyh@debian.org>  Fri,  7 May 2004 23:44:01 -0400

ddetect (0.94) unstable; urgency=low

  * Joey Hess
    - Find unavailable modules before calculating the size of the progress
      bar and stop displaying progress messages about skipping such modules.
      Closes: #241467
    - Made checking for already loaded modules O(n) instead of previous
      O(n^2).
    - Other speedups.
    - Never display "[Unknown]" as a module name in the selection list.
    - The airport test is good enough to not belong in get_manual_hw_info.
    - Ask the start_pcmcia qestion.
    - Mark the start_pcmcia question as translatable.
    - Only ask the question if pcmcia is not running (uses its pid file).
    - Restart cardmgr if it's already running to make sure it uses any modules
      that were not available before. Closes: #234564
    - Redirect fd 3 from /dev/null when starting pcmcia to avoid debconf fd
      hang issues.
  * Christian Perrier
    - Removed the double questioning in the pcmcia_start template
      Reworded the template for simplification
  * Kenshi Muto
    - Check module name includes '_' also by replacing '-' for Linux 2.6.
      Closes: #247249
  * Stephen R. Marenka
    - Add support for q40 and sun3(x) m68k subarchs.
  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Alwin Meschede