@@ -4,13 +4,16 @@ ddetect (0.95) UNRELEASED; urgency=low
     - Bump priorities of hw-detect and hw-detect-full to standard, in line
       with the override file.
   * Joey Hess
-    - Follow cdrom-detect's lead by making ethdetect ask for a driver 
+    - Follow cdrom-detect's lead by making ethdetect ask for a driver
       floppy if the network card detection fails and no module was
       selected from the manual list. The previous method didn't work
       since many media lack a menu item to load floppies. Closes: #247941
     - BTW, think "firmware floppy". :-(
+  * Joshua Kwan
+    - Devnames for PCMCIA devices, as given by their built in names, using
+      the information from /var/run/stab. Woohoo!
 
- -- Joey Hess <joeyh@debian.org>  Fri,  7 May 2004 23:44:01 -0400
+ -- Joshua Kwan <joshk@triplehelix.org>  Fri,  7 May 2004 21:06:47 -0700
 
 ddetect (0.94) unstable; urgency=low
 
